# Authuntication-Part-2

./: Dockerfile  pyproject.toml
auth/: routes.py
auth_controllers/: user_controller.py
db/: db.py  settings.py
kafka/: kafka.py
models/: user_models.py
oauth/: custome_oauth_form.py
routes/: user_routes.py
security/: strictnes.py
